@@ -171,10 +171,8 @@ unset($vehicle,$menu);
 /* now pack in the license file, readme and setup options */
 $modx->log(modX::LOG_LEVEL_INFO,'Adding package attributes and setup options...');
 $builder->setPackageAttributes(array(
-/*
     'license' => file_get_contents($sources['docs'] . 'license.txt'),
     'readme' => file_get_contents($sources['docs'] . 'readme.txt'),
-    */
     'setup-options' => array(
         'source' => $sources['build'].'setup.options.php',
     ),
