@@ -1,8 +1,13 @@
 --------------------
 3PC: Discuss
 --------------------
-Version: 1.0
-Since: October 5, 2009
+Version: 0.1
+Since: December 16th, 2009
 Author: Shaun McCormick <shaun@collabpad.com>
 
 A native, threaded forum solution for MODx Revolution.
+
+This is an alpha prerelease. Therefore, things might break. But have fun. :)
+
+Feel free to suggest ideas/improvements/bugs on the forums. 
+Also, please see the JIRA project: http://svn.modxcms.com/jira/browse/DISCUSS
