@@ -2,6 +2,8 @@ Changelog for Discuss.
 
 Discuss 0.1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Got setup and build working as expected
+- Lots of i18n work
 - Added auto-install Resources resolver and setup option 
 - Started build script process, i18n work
 - Initial changelog started
